--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@treecg/tree-metadata-extraction": "^1.1.1",
     "core-js": "^3.6.5",
+    "d3": "^7.0.0",
+    "rdf-dereference": "^1.8.0",
+    "setimmediate": "^1.0.5",
     "vue": "^3.0.0"
   },
   "devDependencies": {
