--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@rdfjs/parser-n3": "^1.1.4",
     "@treecg/tree-metadata-extraction": "^1.1.1",
     "core-js": "^3.6.5",
     "d3": "^7.0.0",
     "d3-jetpack": "^2.2.0",
     "d3-textwrap": "^3.0.0",
+    "fs": "^0.0.1-security",
     "rdf-dereference": "^1.8.0",
+    "rdf-ext": "^1.3.5",
+    "rdf-validate-shacl": "^0.3.2",
     "setimmediate": "^1.0.5",
     "vue": "^3.0.0"
   },
